# tau-engine

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: common.rs  solve.rs
benches/rules/: complex.yml  contains_multiple.yml  regex_multiple.yml  searches.yml  simple.yml  slow.yml
src/: document.rs  error.rs  identifier.rs  json.rs  lib.rs  optimiser.rs  parser.rs  rule.rs  shaker.rs  solver.rs  tokeniser.rs  value.rs  yaml.rs
tests/: common.rs  invalid.rs  solve.rs
tests/rules/: array_indexing.yml  boolean.yml  boolean_expression_and.yml  boolean_expression_greater_than.yml  boolean_expression_greater_than_or_equal.yml  boolean_expression_less_than.yml  boolean_expression_less_than_or_equal.yml  boolean_expression_or.yml  boolean_group.yml  boolean_group_and.yml  boolean_group_or.yml  cast_flt.yml  cast_flt_field.yml  cast_flt_nested.yml  cast_int.yml  cast_int_field.yml  cast_int_nested.yml  cast_str.yml  cast_str_field.yml  cast_str_nested.yml  float.yml  hash.yml  identifier_missing.yml  integer.yml  many_and_nots.yml  many_ands.yml  match_all.yml  match_all_0.yml  match_all_duplicate.yml  match_all_identifier.yml  match_all_invalid.yml  match_all_matrix.yml  match_of.yml  match_of_0.yml  match_of_1.yml  match_of_invalid.yml  negate.yml  negate_sequence.yml  nested.yml  nested_dot_notation.yml  (+6 more)
